# percolation_poc_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.ME  README.md  requirements.txt
common/: search.cpp  search.h
ising_model/: config.hpp  h5parser.cpp  h5parser.h  ising_simulation.cpp  ising_simulation.h  main.cpp  metric.hpp  metric_writer.cpp  metric_writer.h  random.hpp  search.cpp  search.h  simulation.cpp  simulation.h  states.hpp
notebook/: visualisaton.ipynb
plotter/: Cargo.toml  percolation_metrics.json
plotter/src/: data_reader.rs  main.rs  plotter.rs  sim_data.rs
resources/: config.json
src/: config.cpp  config.h  file_io.cpp  file_io.h  interaction.cpp  interaction.h  main.cpp  matrix.hpp  printer.cpp  printer.h  search.cpp  search.h  simulation.cpp  simulation.h  state_dump.cpp  state_dump.h
test/: test_ising.cpp  test_search.cpp
